crates/ars-components/src/input/checkbox_group/snapshots/ars_components__input__checkbox_group__tests__checkbox_group_description.snap
---
source: crates/ars-components/src/input/checkbox_group/mod.rs
expression: snapshot_attrs(&api.description_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "checkbox-group",
            ),
        ),
        (
            Id,
            String(
                "features-description",
            ),
        ),
    ],
    styles: [],
}
