crates/ars-components/src/input/checkbox_group/snapshots/ars_components__input__checkbox_group__tests__checkbox_group_hidden_input_configs_absent_without_name.snap
---
source: crates/ars-components/src/input/checkbox_group/mod.rs
expression: "snapshot_configs(&service.connect(&|_| {}).hidden_input_configs())"
---
[]
